@startuml refactoredSRP(S)
interface Comparable
interface Client

class Car {
    - String _id
    - String _model
    - String _brand
    + Car(String id, String model, String brand)
    + String getId()
    + String getModel()
    + String getBrand()
    + String toString()
    + int compareTo(Car other)
}

class CarDb {
    - static CarDb _instance
    - CarDb()
    + static CarDb getInstance()
    + List<Car> getAll()
    + Car getById(String carId)
    + List<Car> getByModel(String model)
    + List<Car> getByBrand(String brand)
    + void addCar(Car car)
    + void removeCar(Car car)
}

class CarStr {
    + String getAllNames(List<Car> cars)
    + String getUniqueBrands(List<Car> cars)
}

class CarComp {
    + Car getBestCar()
}

class CarManager {
    + CarManager(CarDb carDb, CarStr carStr, CarComp carComp)
    + String getCarsNames()
    + String getUniqueBrands()
    + String getBestCar()
}

CarManager "1" --> "1" CarDb
CarManager "1" --> "1" CarStr
CarManager "1" --> "1" CarComp
CarDb "1" o-- "*" Car
CarStr  -.->  Car : uses
CarComp  -.->  Car : uses
Car --|> Comparable : implements
Client -.-> CarManager : uses
@enduml